--- a/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
+++ b/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
@@ -1,21 +1,70 @@
 <html lang='en'>
+
   <head>
-    <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <!-- Do not forget to change the path to the css file -->
+    <link rel='stylesheet' href='/static/css/style.css' />
+    <title>Home Page</title>
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
+    <!-- In case of error, you should display div with class "error" -->
+    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+
     {{#if errors}}
-      <div>
-        {{#each errors}}
-          <p>{{this}}</p>
-        {{/each}}
+      <div class='error'>
+        <p>{{this}}</p>
       </div>
     {{/if}}
-    {{{body}}}
+
+    <nav class='navbar navbar-expand-lg navbar-dark bg-dark fixed-top'>
+      <div class='container'>
+        <!-- Do not forget to change the path to the images -->
+        <img class='logo' src='/static/images/before.png' alt='before-logo' />
+        <img
+          class='car logo'
+          src='/static/images/trip-logo.png'
+          alt='trip-logo'
+        />
+        <img class='logo' src='/static/images/after.png' alt='after-logo' />
+        <div class='collapse navbar-collapse' id='navbarResponsive'>
+
+          <ul class='navbar-nav ml-auto'>
+            <!-- Guest users and Logged users -->
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Home</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Shared Trips</a>
+            </li>
+            <!-- Logged users -->
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Offer Trip</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Profile</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Logout as [ test@abv.bg ]</a>
+            </li>
+            <!-- Guest users -->
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Login</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link' href=''>Register</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main>{{{body}}}</main>
+
+    <footer id='sticky-footer' class='bg-dark'>
+      <div class='container'>
+        <p class='m-0 text-center text-white'>Copyright &copy; Shared Trip 2021</p>
+      </div>
+    </footer>
   </body>
+
 </html>
