--- a/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
+++ b/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
@@ -48,10 +48,10 @@
             </li>
             <!-- Guest users -->
             <li class='nav-item'>
-              <a class='nav-link' href=''>Login</a>
+              <a class='nav-link' href='/auth/login'>Login</a>
             </li>
             <li class='nav-item'>
-              <a class='nav-link' href=''>Register</a>
+              <a class='nav-link' href='/auth/register'>Register</a>
             </li>
           </ul>
         </div>
