--- a/JSWeb-exams/Shared-Trip/views/login.hbs
+++ b/JSWeb-exams/Shared-Trip/views/login.hbs
@@ -1,6 +1,23 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+<section class="py-5" id="login-page">
+            <div class="container login-page">
+                <h1>Login</h1>
+                <div class="login">
+                    <form action="/auth/login" method="post">
+                        <div class="form-group">
+                            <label for="email">Email address</label>
+                            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email"
+                                value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password" name="password"
+                                value="">
+                        </div>
+                        <div class="form-group">
+                            <p>Not registered yet? <a href="">Register Now!</a></p>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </section>
