--- a/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
+++ b/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
@@ -11,9 +11,11 @@
     <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
 
     {{#if errors}}
-      <div class='error'>
-        <p>{{this}}</p>
-      </div>
+      {{#each errors}}
+        <div class='error'>
+          <p>{{this}}</p>
+        </div>
+      {{/each}}
     {{/if}}
 
     <nav class='navbar navbar-expand-lg navbar-dark bg-dark fixed-top'>
