--- a/JSWeb-exams/Shared-Trip/views/register.hbs
+++ b/JSWeb-exams/Shared-Trip/views/register.hbs
@@ -10,7 +10,7 @@
             class='form-control'
             id='email'
             placeholder='Enter email'
-            name=''
+            name='email'
             value=''
           />
         </div>
@@ -21,7 +21,7 @@
             class='form-control'
             id='password'
             placeholder='Password'
-            name=''
+            name='password'
             value=''
           />
         </div>
@@ -32,19 +32,19 @@
             class='form-control'
             id='rePassword'
             placeholder='Re-Password'
-            name=''
+            name='repass'
             value=''
           />
         </div>
         <label>Gender</label>
         <div class='gender'>
-          <input type='radio' id='female' name='' value='' />
+          <input type='radio' id='female' name='gender' value='female' />
           <label for='female'>Female</label>
-          <input type='radio' id='male' name='' value='' checked />
+          <input type='radio' id='male' name='gender' value='male' checked />
           <label for='male'>Male</label>
         </div>
         <div class='form-group'>
-          <p>Already have account? <a href=''>Login Now!</a></p>
+          <p>Already have account? <a href='/auth/login'>Login Now!</a></p>
         </div>
         <button type='submit' class='btn btn-primary'>Submit</button>
       </form>
