--- a/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
+++ b/JSWeb-exams/Shared-Trip/views/layouts/main.hbs
@@ -42,14 +42,13 @@
             {{#if email}}
               <!-- Logged users -->
               <li class='nav-item'>
-                <a class='nav-link' href='/site/offer'>Offer Trip</a>
+                <a class='nav-link' href='/site/create'>Offer Trip</a>
               </li>
               <li class='nav-item'>
                 <a class='nav-link' href='/site/profile'>Profile</a>
               </li>
               <li class='nav-item'>
-                <a class='nav-link' href='/auth/logout'>Logout as [ test@abv.bg
-                  ]</a>
+                <a class='nav-link' href='/auth/logout'>Logout as {{email}}</a>
               </li>
             {{else}}
               <!-- Guest users -->
