--- a/JSWeb-exams/Shared-Trip/views/catalog.hbs
+++ b/JSWeb-exams/Shared-Trip/views/catalog.hbs
@@ -12,12 +12,12 @@
         {{#each trips}}
         {{> tripCard}}
         {{/each}}
-        {{/if}}
-
+       
+          {{else}}
         <!-- If there are no shared trips in the database -->
         <div class="no-trips">
             <img src="https://www.stagweb.co.uk/img/activities/big/sexyhitchhiker1.jpg" />
             <p class="lead">Hitchhiker time...</p>
         </div>
-
+ {{/if}}
     </div>
