--- a/JSWeb-exams/Shared-Trip/views/partials/tripCard.hbs
+++ b/JSWeb-exams/Shared-Trip/views/partials/tripCard.hbs
@@ -22,7 +22,7 @@
       </h5>
     </div>
     <div class='card-footer'>
-      <a href='' class='btn btn-primary'>Details</a>
+      <a href='/site/{{_id}}/details' class='btn btn-primary'>Details</a>
     </div>
   </div>
 </div>
