--- a/JSWeb-exams/Shared-Trip/views/details.hbs
+++ b/JSWeb-exams/Shared-Trip/views/details.hbs
@@ -45,21 +45,31 @@
         <h5>Price: <span class='lead'>{{trip.price}}</span> BGN</h5>
 
         <!-- if there are no logged in user do not show div with class actions  -->
-        <div class='actions'>
-          <!-- Only for logged user and creator to this trip -->
-          <a href='' class='btn btn-danger'>Delete this trip</a>
-          <a href='' class='btn btn-warning'>Edit this trip</a>
+        {{#if email}}
+          <div class='actions'>
+            {{#if trip.owner}}
+              <!-- Only for logged user and creator to this trip -->
+              <a href='' class='btn btn-danger'>Delete this trip</a>
+              <a href='' class='btn btn-warning'>Edit this trip</a>
+            {{else}}
 
-          <!-- logged in user with available seats -->
-          <a href='' class='btn btn-join'>Join now, [ 1 ] seats left!</a>
-
-          <!-- logged in user and has already joined the trip  -->
-          <span class='btn btn-info'>Already joined. Don't be late!</span>
-
-          <!-- logged in user with no available seats -->
-          <span class='btn btn-secondary'>No seats available! [0]</span>
-        </div>
-
+              {{#if trip.hasSeats}}
+                <!-- logged in user with available seats -->
+                <a href='' class='btn btn-join'>Join now,
+                  {{trip.seats}}
+                  seats left!</a>
+              {{/if}}
+              
+              <!-- logged in user and has already joined the trip  -->
+              <span class='btn btn-info'>Already joined. Don't be late!</span>
+              
+              {{#if trip.noSeats}}
+                <!-- logged in user with no available seats -->
+                <span class='btn btn-secondary'>No seats available! [0]</span>
+              {{/if}}
+            {{/if}}
+          </div>
+        {{/if}}
       </div>
     </div>
   </div>
