--- a/JSWeb-exams/Shared-Trip/views/details.hbs
+++ b/JSWeb-exams/Shared-Trip/views/details.hbs
@@ -20,11 +20,13 @@
       <i class='fas fa-users buddies'></i>
       <h5>Shared trip Buddies</h5>
       <div>
-        <!-- if there are joined buddies for the current trip separate them with comma and space", " -->
-        <p>peter@abv.bg, marry@abv.bg</p>
-
-        <!-- If not display: -->
-        <p>there are no buddies yet...</p>
+        {{#if trip.hasBuddies}}
+          <!-- if there are joined buddies for the current trip separate them with comma and space", " -->
+          <p>{{trip.emails}}</p>
+        {{else}}
+          <!-- If not display: -->
+          <p>there are no buddies yet...</p>
+        {{/if}}
       </div>
       <h5>Driver: <span>{{trip.creator.email}}</span> </h5>
     </div>
@@ -54,21 +56,27 @@
             {{else}}
 
               {{#if trip.hasSeats}}
-                <!-- logged in user with available seats -->
-                <a href='/site/{{trip._id}}/join' class='btn btn-join'>Join now,
-                  {{trip.seats}}
-                  seats left!</a>
+                {{#if trip.notJoined}}
+                  <!-- logged in user with available seats -->
+                  <a href='/site/{{trip._id}}/join' class='btn btn-join'>Join
+                    now,
+                    {{trip.seats}}
+                    seats left!</a>
+                {{/if}}
               {{/if}}
 
-              <!-- logged in user and has already joined the trip  -->
               {{#if trip.joined}}
+                <!-- logged in user and has already joined the trip  -->
                 <span class='btn btn-info'>Already joined. Don't be late!</span>
               {{/if}}
-              
-              {{#if trip.noSeats}}
-                <!-- logged in user with no available seats -->
-                <span class='btn btn-secondary'>No seats available! </span>
+
+              {{#if trip.notJoined}}
+                {{#if trip.noSeats}}
+                  <!-- logged in user with no available seats -->
+                  <span class='btn btn-secondary'>No seats available! </span>
+                {{/if}}
               {{/if}}
+
             {{/if}}
           </div>
         {{/if}}
