--- a/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
+++ b/JSWeb-exams/Wildlife-Photography/views/layouts/main.hbs
@@ -8,17 +8,17 @@
     <link href='/static/css/style.css' type='text/css' rel='stylesheet' />
   </head>
 
+  {{#if errors}}
+    {{#each errors}}
+      <div class='error-container'>
+        <p>{{msg}}</p>
+      </div>
+    {{/each}}
+  {{/if}}
+
   <body>
 
     <div id='box'>
-
-      {{#if errors}}
-        {{#each errors}}
-          <div class='error-container'>
-            <p>{{this}}</p>
-          </div>
-        {{/each}}
-      {{/if}}
 
       <nav>
         <!-- Do not forget to change the path to the image -->
