--- a/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
@@ -1,21 +1,49 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <!-- Do not forget to change the path to the css file -->
+    <title>Home Page</title>
+    <link href='./static/css/style.css' type='text/css' rel='stylesheet' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
-    {{#if errors}}
-      <div>
-        {{#each errors}}
-          <p>{{this}}</p>
-        {{/each}}
-      </div>
-    {{/if}}
-    {{{body}}}
+
+    <div id='box'>
+
+      <!-- In case of error, you should display div with class "errorContainer" -->
+      <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+
+      <!--<div>
+            <div class="errorContainer">
+                <p>Error</p>
+            </div>
+        </div>-->
+
+      <nav>
+        <a href='/'>Home</a>
+        <ul>
+          <!-- Guest users and Logged users -->
+          <li><a href='#'>Housing for rent</a></li>
+          <!-- Guest users -->
+          <li><a href='/auth/login'>Login</a></li>
+          <li><a href='/auth/register'>Register</a></li>
+          <!-- Logged users -->
+          <li><a href='/site/create'>Create offer</a></li>
+          <li><a href='#'>Search</a></li>
+          <li><a href='/auth/logout'>Logout</a></li>
+        </ul>
+      </nav>
+
+      <main>
+        {{{body}}}
+      </main>
+
+      <footer>
+        © 2021
+      </footer>
+    </div>
+
   </body>
+
 </html>
