--- a/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset='UTF-8' />
     <!-- Do not forget to change the path to the css file -->
     <title>Home Page</title>
-    <link href='./static/css/style.css' type='text/css' rel='stylesheet' />
+    <link href='/static/css/style.css' type='text/css' rel='stylesheet' />
   </head>
 
   <body>
