--- a/JSWeb-exams/Real-Estate-Agency/views/login.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/login.hbs
@@ -1,6 +1,44 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+<main>
+  <section id='login-page'>
+    <div class='boxs'>
+      <div class='card-image'>
+        <h2 class='card-heading'>
+          Login
+        </h2>
+      </div>
+      <form class='card-form' action='/auth/login' method='post'>
+
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            placeholder=''
+            id='username'
+            name='username'
+            value=''
+          />
+          <label class='username'>Username</label>
+        </div>
+        <div class='input'>
+          <input
+            type='password'
+            class='input-field'
+            id='password'
+            name='password'
+            placeholder='******'
+          />
+          <label class='password'>Password</label>
+        </div>
+        <div class='action'>
+          <button class='action-button'>Login</button>
+        </div>
+      </form>
+      <div class='card-info'>
+        <p>Dont have an account?
+          <a href='/auth/register'>Sign up</a>.
+        </p>
+      </div>
+    </div>
+  </section>
+
+</main>
