--- a/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/layouts/main.hbs
@@ -23,15 +23,19 @@
       <nav>
         <a href='/'>Home</a>
         <ul>
+
           <!-- Guest users and Logged users -->
           <li><a href='#'>Housing for rent</a></li>
           <!-- Guest users -->
-          <li><a href='/auth/login'>Login</a></li>
-          <li><a href='/auth/register'>Register</a></li>
-          <!-- Logged users -->
-          <li><a href='/site/create'>Create offer</a></li>
-          <li><a href='#'>Search</a></li>
-          <li><a href='/auth/logout'>Logout</a></li>
+          {{#unless username}}
+            <li><a href='/auth/login'>Login</a></li>
+            <li><a href='/auth/register'>Register</a></li>
+            <!-- Logged users -->
+          {{else}}
+            <li><a href='/site/create'>Create offer</a></li>
+            <li><a href='#'>Search</a></li>
+            <li><a href='/auth/logout'>Logout</a></li>
+          {{/unless}}
         </ul>
       </nav>
 
