--- a/JSWeb-exams/Real-Estate-Agency/views/create.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/create.hbs
@@ -1,53 +1,98 @@
 <main>
-    <section id='create-page'>
-        <div class='create-container'>
-            <div class='box-image'></div>
+  <section id='create-page'>
+    <div class='create-container'>
+      <div class='box-image'></div>
 
-            <h2 class='box-heading'> Add new home</h2>
+      <h2 class='box-heading'> Add new home</h2>
 
-            <form class='form' action='/site/create' method='post'>
-                <div class='input'>
-                    <input type='text' class='input-field' id='home-name' placeholder='Real House Luxury Villa...'
-                        name='name' value='' />
-                    <label class='home-name'>Name:</label>
-                </div>
-                <div class='input'>
-                    <input type='text' class='input-field' id='type' placeholder='Villa...' name='type' value='' />
-                    <label class='type'>Property Type:</label>
-                </div>
-                <div class='input'>
-                    <input type='number' class='input-field' id='year' placeholder='2018...' name='year' value='' />
-                    <label class='year'>Year Built:</label>
-                </div>
-                <div class='input'>
-                    <input type='text' class='input-field' id='city' placeholder='Sofia...' name='city' value='' />
-                    <label class='city'>City</label>
-                </div>
-
-                <div class='input'>
-                    <input type='text' class='input-field' id='homeImage' placeholder='Image...' name='image'
-                        value='' />
-                    <label class='homeImage'>Home Image:</label>
-                </div>
-
-                <div class='input'>
-                    <input type='text' class='input-field' id='description' placeholder='Description...'
-                        name='description' value='' />
-                    <label class='description'>Property Description:</label>
-                </div>
-
-                <div class='input'>
-                    <input type='number' class='input-field' id='availablePieces' placeholder='1' name='availablePieces'
-                        value='' />
-                    <label class='availablePieces'>Available pieces:</label>
-                </div>
-
-                <div class='create-action'>
-                    <button class='create-button'>Add</button>
-                </div>
-
-            </form>
+      <form class='form' action='/site/create' method='post'>
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            id='home-name'
+            placeholder='Real House Luxury Villa...'
+            name='name'
+            value='{{housing.name}}'
+          />
+          <label class='home-name'>Name:</label>
         </div>
-    </section>
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            id='type'
+            placeholder='Villa...'
+            name='type'
+            value='{{housing.type}}'
+          />
+          <label class='type'>Property Type:</label>
+        </div>
+        <div class='input'>
+          <input
+            type='number'
+            class='input-field'
+            id='year'
+            placeholder='2018...'
+            name='year'
+            value='{{housing.year}}'
+          />
+          <label class='year'>Year Built:</label>
+        </div>
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            id='city'
+            placeholder='Sofia...'
+            name='city'
+            value='{{housing.city}}'
+          />
+          <label class='city'>City</label>
+        </div>
+
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            id='homeImage'
+            placeholder='Image...'
+            name='image'
+            value='{{housing.image}}'
+          />
+          <label class='homeImage'>Home Image:</label>
+        </div>
+
+        <div class='input'>
+          <input
+            type='text'
+            class='input-field'
+            id='description'
+            placeholder='Description...'
+            name='description'
+            value='{{housing.description}}'
+          />
+          <label class='description'>Property Description:</label>
+        </div>
+
+        <div class='input'>
+          <input
+            type='number'
+            class='input-field'
+            id='availablePieces'
+            placeholder='1'
+            name='availablePieces'
+            value='{{housing.availablePieces}}'
+          />
+          <label class='availablePieces'>Available pieces:</label>
+        </div>
+
+        <div class='create-action'>
+          <button class='create-button'>Add</button>
+        </div>
+
+      </form>
+    </div>
+  </section>
 
 </main>
