--- a/JSWeb-exams/Real-Estate-Agency/views/home.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/home.hbs
@@ -1,51 +1,28 @@
-<section id='home-page' class='background-image'>
-  <div class='home-container'>
+<section id="home-page" class="background-image">
+    <div class="home-container">
 
-    <div class='info'>
-      <h1>Discover Your Perfect Home</h1>
-      <h2>The Best Real Estate Deals</h2>
+        <div class="info">
+            <h1>Discover Your Perfect Home</h1>
+            <h2>The Best Real Estate Deals</h2>
+        </div>
+
     </div>
-
-  </div>
 </section>
 
 <section id='top-houses'>
+  {{#if housings}}
   <h1>Top Houses</h1>
   <div class='houses'>
 
-    <div class='card-home'>
-      <h2>Real House Luxury Villa</h2>
-      <div class='cta-container'><a
-          href='#'
-          class='details-link'
-        >Details</a></div>
-      <div class='card_image'><img src='./static/images/5.jpg' /></div>
-
-    </div>
-
-    <div class='card-home'>
-      <h2>House Take Away</h2>
-      <div class='cta-container'><a
-          href='#'
-          class='details-link'
-        >Details</a></div>
-      <div class='card_image'><img src='./static/images/house2.jpg' /></div>
-
-    </div>
-
-    <div class='card-home'>
-      <h2>Sunhouse C21</h2>
-      <div class='cta-container'><a
-          href='#'
-          class='details-link'
-        >Details</a></div>
-      <div class='card_image'><img src='./static/images/apartments.jpg' /></div>
-
-    </div>
+  {{#each housings}}
+   {{> homeCard}}
+  {{/each}}
+    {{else}}
 
     <!-- If there are still no offers for housing in the database display: -->
-    <!--<div class="no-data-container">
+    <div class="no-data-container">
                         <p class="no-data">There are no housing offers found...</p>
-                    </div>-->
+                    </div>
+                    {{/if}}
   </div>
 </section>
